--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,5 @@
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-PORT=
-DB_DIALECT=
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/memoriesdb"
+PORT=3001
+SECRETJWT=121212121212
+HOST=localhost:3001/public
+PROTOCOL=http
