--- a/package.json
+++ b/package.json
@@ -8,14 +8,29 @@
     "build": "tsc && node ./dist/server.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mime-types": "^2.1.1",
+    "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
+    "@types/uuid": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^3.0.1",
-    "sequelize": "^6.28.0"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
+    "prisma": "^4.13.0",
+    "swagger-ui-express": "^4.6.2",
+    "uuid": "^9.0.0"
   }
 }
