--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-inital-typescript",
+  "name": "app-sctruture-typescript",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
