--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "dev": "ts-node-dev --inspect --transpile-only --trace-warnings --ignore-watch node_modules src/server.ts",
     "build": "tsc && node ./dist/server.js"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
@@ -15,6 +16,7 @@
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
+    "eslint": "^8.55.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
