--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,3 @@
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/memoriesdb"
+DATABASE_URL="mysql://root:root@localhost:3306/localbackend"
 PORT=3001
-SECRETJWT=121212121212
-HOST=localhost:3001/public
-PROTOCOL=http
+SECRETJWT="sA10320#)30$/Q/W@@@002@@"
